<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/received_text_message_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dummy_user"
        android:textSize="12sp"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/received_text_message_body"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/received_text_message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_rectangle_orange"
        android:maxWidth="240dp"
        android:padding="8dp"
        android:text="@string/hola"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/received_text_message_name"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/received_text_message_time"
        android:text="@string/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/received_text_message_body"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/received_text_message_body" />

    <ImageButton
        android:id="@+id/received_text_message_encryption"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/received_text_message_body"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512"
        android:contentDescription="@string/received_message" />

</androidx.constraintlayout.widget.ConstraintLayout>