<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/send_text_message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_blue"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:text="@string/hola"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/send_text_message_time"
        android:text="@string/dummy_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/send_text_message_body"
        app:layout_constraintRight_toLeftOf="@+id/send_text_message_body" />

    <ImageButton
        android:id="@+id/send_text_message_encryption"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/send_text_message_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/send_text_message_body"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/message_sent" />

</androidx.constraintlayout.widget.ConstraintLayout>