<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/item_list"
    android:layout_height="100dp"
    android:layout_marginTop="5dp">

    <TextView
        android:id="@+id/userName"
        android:layout_width="52dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/item_username"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input_userName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:maxLength="12"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:singleLine="true"
        android:text="@string/input"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintRight_toRightOf="@id/userName"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toTopOf="@+id/userName" />


    <TextView
        android:id="@+id/deviceName"
        android:layout_width="52dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/item_deviceName"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/input_deviceName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:maxLength="12"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:singleLine="true"
        android:text="@string/input"

        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/deviceName"
        app:layout_constraintRight_toRightOf="@id/deviceName"
        app:layout_constraintStart_toEndOf="@+id/deviceName"
        app:layout_constraintTop_toTopOf="@+id/deviceName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/item_button_status"
        android:layout_width="wrap_content"
        style="@style/Widget.Chatto.Button"
        android:layout_height="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/item_connected"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>